# trace_calc

./: .env.example  .gitignore  Antenna_Elevation_Angle_Analysis_Implementation_Guide.md  Architectural_refactoring.md  COMMON_VOLUME_ANALYSIS_IMPLEMENTATION_PLAN.md  COORDINATES_FEATURE_SUMMARY.md  EXAMPLE_OUTPUT.md  EXTENDED_VISIBILITY_IMPLEMENTATION_PLAN.md  GEMINI_IMPLEMENTATION_PROMPT.md  README.md  prototype_real_data_plot.py  pyproject.toml  test_real_data_plot.py  verify_plot.py
examples/: README.md  basic_integration.py  custom_hca_calculator.py  custom_model.py  testing_custom_model.py
tests/: fixtures.py  mocks.py  test_analyzers.py  test_hca_calculator.py  test_plotter.py  test_process.py  test_profile_service.py  test_profile_visualization.py  test_validators.py
tests/integration/: test_adapter_facade.py  test_common_volume_analysis.py  test_extended_visibility.py  test_json_output.py
trace_calc/: __init__.py  adapter.py  async_get_sites.py  log_filters.py  logging_config.py  main.py
trace_calc/application/: analysis.py  orchestration.py
trace_calc/domain/: __init__.py  constants.py  curvature.py  geometry.py  interfaces.py  speed_calculators.py  units.py  validators.py
trace_calc/infrastructure/: __init__.py  storage.py
trace_calc/models/: input_data.py  path.py
trace_calc/service/: analyzer.py  analyzers.py  api_clients.py  base.py  coordinates_service.py  exceptions.py  hca_calculator.py  path_calculator.py  path_storage.py  plotter.py  process.py  profile_data_calculator.py  profile_service.py  speed_calculators.py
(+56 files in other folders)
