[tool.poetry]
name = "trace-calc"
version = "0.3.22"
description = ""
authors = ["DipodDP <dipoddp@gmail.com>"]
readme = "README.md"
# packages = [{include = "trace_calc"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.1"
numpy = "^1.25.0"
environs = "^9.5.0"
requests = "^2.31.0"
progressbar2 = "^4.5.0"
aiofiles = "^24.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
